src/objects/Error_Event_Capture__e.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <label>Error Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Detail__c</fullName>
        <label>Record Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>RequestId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Event Capture</label>
    <pluralLabel>Error Events Capture</pluralLabel>
</CustomObject>